@@ -40,6 +40,7 @@ Change log next version
 * Fixed an issue where a static preemptive basic authentication couldn't be overridden by instance authentication (issue 233).
 * Fixed an issue where multi-valued query parameters defined in the URL now works. For example get("/x?y=1&y=2") (issue 169).
 * Improved request logging so that query parametes are included in the complete path.
+* Allow URLs that contains double slashes, for example get("/x/y/http://localhost:8080")
 
 Change log 1.8.1 (2013-06-07)
 -----------------------------
